src/test/ui/type/type-params-in-different-spaces-2.stderr
error[E0277]: the trait bound `Self: Tr<U>` is not satisfied
  --> $DIR/type-params-in-different-spaces-2.rs:10:9
   |
LL |     fn op(_: T) -> Self;
   |     -------------------- required by `Tr::op`
...
LL |         Tr::op(u)
   |         ^^^^^^ the trait `Tr<U>` is not implemented for `Self`
   |
   = help: consider adding a `where Self: Tr<U>` bound

error[E0277]: the trait bound `Self: Tr<U>` is not satisfied
  --> $DIR/type-params-in-different-spaces-2.rs:16:9
   |
LL |     fn op(_: T) -> Self;
   |     -------------------- required by `Tr::op`
...
LL |         Tr::op(u)
   |         ^^^^^^ the trait `Tr<U>` is not implemented for `Self`
   |
   = help: consider adding a `where Self: Tr<U>` bound

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
